[project]
name = "conductor-takehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mtwilliams", email = "matt@mtw.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "notebook>=7.4.7",
    "pdfplumber>=0.11.7",
]


[project.scripts]
conductor-takehome = "conductor_takehome:main"
maxnum = "conductor_takehome.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
